--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -1,4 +1,23 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<br><br><br><br>
+<div class="container">
+    <div class="row text-center">
+        <h3>{{ user.username }}</h3>
+    </div>
+    <div class="row">
+        <div class="col">
+            <h5>Saved Gearsets</h5>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            {% for gearset in user.gearsets %}
+                <a href="/gear/id/{{ gearset.id }}">{{ gearset.name }}</a>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+
 {% endblock %}
