--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 
-  <div class="row justify-content-md-center">
+<br><br><br><br>
+<div class="row justify-content-md-center">
     <div class="col-md-7 col-lg-5">
       <form method="POST" id="user_form">
         <h2 class="join-message">Sign up for XIVPlanner</h2>
@@ -27,7 +28,8 @@
               </ul>
             {% endif %}
           {% endwith %}
-        <button class="btn btn-primary btn-lg btn-block">Sign up!</button>
+          <br>
+        <button class="btn btn-primary btn-lg btn-block">Sign up</button>
       </form>
     </div>
 </div>
