--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
               </li>
             </ul>
             {% endif %}
-            {% if g.user.gearsets %}
+            {% if g.user %}
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -47,6 +47,8 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
                         <li><a class="dropdown-item" href="/profile/id/{{ g.user.id }}">Profile</a></li>
+                        <li><a class="dropdown-item" href="/profile/id/{{ g.user.id }}/edit">Edit User</a></li>
+                        <li><a class="dropdown-item" href="/profile/id/{{ g.user.id }}/delete">Delete User</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="/logout">Log Out</a></li>
                         </ul>
