--- a/templates/gear/gear_create.html
+++ b/templates/gear/gear_create.html
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container border">
         <div class="row align-items-center">
             <div class="col-md-4">
                 <span>Weapon</span>
