--- a/templates/users/profile_edit.html
+++ b/templates/users/profile_edit.html
@@ -1,15 +1,11 @@
 {% extends 'base.html' %}
-
-{% block body_class %}onboarding{% endblock %}
-
 {% block content %}
 
 <br><br><br><br>
-  <div class="row justify-content-md-center">
+<div class="row justify-content-md-center">
     <div class="col-md-7 col-lg-5">
-      <h2 class="join-message">Welcome back.</h2>
-
       <form method="POST" id="user_form">
+        <h2 class="join-message">Edit {{ g.user.name }}</h2>
         {{ form.hidden_tag() }}
 
         {% for field in form if field.widget.input_type != 'hidden' %}
@@ -19,19 +15,20 @@
           {{ field(placeholder=field.label.text, class="form-control") }}
         {% endfor %}
 
+        
         {% with messages = get_flashed_messages(with_categories=true) %}
-          {% if messages %}
-            <ul class=flashes>
-            {% for category, message in messages %}
-              <li class="{{ category }}">{{ message }}</li>
-            {% endfor %}
-            </ul>
-          {% endif %}
-        {% endwith %}
-        <br>
-        <button class="btn btn-primary btn-block btn-lg">Log in</button>
+            {% if messages %}
+              <ul class=flashes>
+              {% for category, message in messages %}
+                <li class="{{ category }}">{{ message }}</li>
+              {% endfor %}
+              </ul>
+            {% endif %}
+          {% endwith %}
+          <br>
+        <button class="btn btn-primary btn-lg btn-block">Edit</button>
       </form>
     </div>
-  </div>
+</div>
 
 {% endblock %}
