--- a/templates/gear/gear_edit.html
+++ b/templates/gear/gear_edit.html
@@ -172,7 +172,7 @@
         </div>
     </div>
 </form>
-<form action="/gear" method="GET">
+<form action="/gear/id/{{ gearset.id }}" method="GET">
     <div class="container">
         <button class="btn btn-danger float-end" type="submit">Cancel</button>
     </div>
