--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <title>XIVPlanner</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/stylesheets/style.css">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             {% if g.user.gearsets %}
-              <ul class="navbar-nav mb-2 mb-lg-0">
+              <ul class="navbar-nav mb-2 mr-5">
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Gear Planner
@@ -33,12 +34,26 @@
                 </li>
               </ul>
             {% else %}
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-2">
               <li class="nav-item">
                 <a class="nav-link" href="/gear">Gear Planner</a>
               </li>
             </ul>
             {% endif %}
+            <div class="container">
+              <form action="/search" role="search" method="GET">
+                <div class="row g-0">
+                  <div class="col d-inline">
+                    <input type="search" class="form-control-sm-2 w-100" name="term" placeholder="Search for a player" id="search-input">
+                  </div>
+                  <div class="col d-inline">
+                    <button>
+                      <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
             {% if g.user %}
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
@@ -73,8 +88,11 @@
     <!-- Library JS & our JS -->
     <script src="https://unpkg.com/jquery"></script>
     <script src="http://unpkg.com/axios/dist/axios.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" 
+    <script src="https://kit.fontawesome.com/a7d51dbc11.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="/static/js/lodash.js"></script>
+    <script src="/static/js/base.js"></script>
     {% block script %}
     {% endblock %}
 </body>
