--- a/templates/gear/gear_create.html
+++ b/templates/gear/gear_create.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<br><br><br><br>
-<form action="/gear/save" method="POST">
+<form action="/gear/save" method="POST" style="margin-top: 70px;">
     <div class="container">
         <div class="input-group mb-3">
             <div class="input-group-prepend">
@@ -48,7 +47,6 @@
             <input name="name" type="text" class="form-control" aria-label="Gearset Name" required>
         </div>
     </div>
-
     <div class="container border">
         <div class="row align-items-center">
             <div class="col-md-4">
